--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -16,7 +16,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">
-                        <img class="nav-travel" src="../static/images/logo.png">
+                        <img class="nav-travel" src="../static/images/Microsoft.png">
                     </a>
                 </div>
             </div>
@@ -25,7 +25,7 @@
  
  
  <div class="login">
-	<center><h1>Customer Churn Prediction</h1></center>
+	<center><h1>Microsoft Azure Retail AI Analytics</h1></center>
     <center><h4>Developer: Sukil Siva</h4></center>
 
      <!-- Main Input For Receiving Query to our ML -->
